--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,52 +1,80 @@
 <app-menu></app-menu>
-<div class="content-container">
-<div class="card">
-  <div class="card-header bold2">
-    Dashboard
-  </div>
-  <table class="table">
-    <thead>
-      <tr>
-        <th scope="col">#</th>
-        <th scope="col">First</th>
-        <th scope="col">Last</th>
-        <th scope="col">Handle</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <th scope="row">1</th>
-        <td>Mark</td>
-        <td>Otto</td>
-        <td>@mdo</td>
-      </tr>
-      <tr>
-        <th scope="row">2</th>
-        <td>Jacob</td>
-        <td>Thornton</td>
-        <td>@fat</td>
-      </tr>
-      <tr>
-        <th scope="row">3</th>
-        <td>Larry</td>
-        <td>the Bird</td>
-        <td>@twitter</td>
-      </tr>
-    </tbody>
-  </table>
-
-  <div class="d-flex justify-content-end">
-    <nav aria-label="Page navigation example" style="padding-right: 1rem;">
-        <ul class="pagination">
-          <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-          <li class="page-item"><a class="page-link" href="#">1</a></li>
-          <li class="page-item"><a class="page-link" href="#">2</a></li>
-          <li class="page-item"><a class="page-link" href="#">3</a></li>
-          <li class="page-item"><a class="page-link" href="#">Next</a></li>
-        </ul>
-      </nav>
-  </div>
- 
-
-</div>
+<div style="padding-left: 17rem;padding-right: 2rem;padding-top: 5rem;">
+        <div class="d-flex justify-content-between flex-wrap">
+                <div class="p-2 bd-highlight text-center">
+                    <div class="row padding">
+                        <div class="card">
+                            <h5 class="card-header bg-green">
+                                <i class="fa fa-line-chart fa-5"></i>
+                                <a class="bold2">ยอดขายวันนี้</a>
+                            </h5>
+                            <div class="card-body">
+                                <h5 class="card-title">
+                                    <span class="info-box-text bold3">10,000</span>
+                                    <span class="info-box-text"> บาท</span>
+                                </h5>
+                                <a href="#" class="btn btn-light" style="width: 12rem;">รายละเอียด</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="p-2 bd-highlight text-center">
+                    <div class="row padding">
+                        <div class="card">
+                            <h5 class="card-header bg-aqua">
+                                <i class="fa fa-hourglass-end"></i>
+                                <a class="bold2">โต๊ะว่าง</a>
+                            </h5>
+                            <div class="card-body">
+                                <h5 class="card-title">
+                                    <span class="info-box-text bold3">5</span>
+                                    <span class="info-box-text"> โต๊ะ</span>
+                                </h5>
+                                <a href="#" class="btn btn-light" style="width: 12rem;">รายละเอียด</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="p-2 bd-highlight text-center">
+                    <div class="row padding">
+                        <div class="card">
+                            <h5 class="card-header bg-red">
+                                <i class="fa fa-exclamation"></i>
+                                <a class="bold2">สินค้าใกล้หมด</a>
+                            </h5>
+                            <div class="card-body">
+                                <h5 class="card-title">
+                                    <span class="info-box-text bold3">20</span>
+                                    <span class="info-box-text"> รายการ</span>
+                                </h5>
+                                <a href="#" class="btn btn-light" style="width: 12rem;">รายละเอียด</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="p-2 bd-highlight text-center">
+                        <div class="row padding">
+                            <div class="card">
+                                <h5 class="card-header bg-yellow">
+                                    <i class="fa fa-paper-plane-o"></i>
+                                    <a class="bold2">สั่งกลับบ้าน</a>
+                                </h5>
+                                <div class="card-body">
+                                    <h5 class="card-title">
+                                        <span class="info-box-text bold3">5</span>
+                                        <span class="info-box-text"> คิว</span>
+                                    </h5>
+                                    <a href="#" class="btn btn-light" style="width: 12rem;">รายละเอียด</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+        </div>
+    </div>
+<div class="content-container" style="padding-top: 1rem;">
+    <div class="card">
+        <div class="card-header bold2">
+            Dashboard
+        </div>
+    </div>
 </div>
