--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -93,11 +93,15 @@
         </button>
       
         <div class="collapse navbar-collapse flex-row-reverse" id="navbarSupportedContent">
+            
           <form class="form-inline my-2 my-lg-0 ">
             <button type="button" class="btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off" [routerLink]="['']">
               <i class="fa fa-user-circle"></i> Sign out
             </button>
           </form>
+          <i class="fa fa-bell" aria-hidden="true"></i>
+          <i class="fa fa-user-times" aria-hidden="true"></i>
+          <i class="fa fa-users" aria-hidden="true"></i>
         </div>
       </header>
   </div>
