--- a/src/styles.css
+++ b/src/styles.css
@@ -30,6 +30,13 @@ body {
     font-size: 18px;
     color: DimGrey ;
 }
+
+.bold3 {
+    font-weight: bold;
+    font-size: 25px;
+    color: rgb(255, 0, 0) ;
+}
+
 td {
     color: DimGrey ;
     text-align: right;
@@ -112,3 +119,54 @@ i {
   .slider.round:before {
     border-radius: 50%;
   }
+
+  .dashbox {
+    border-style: solid;
+    border-width: 0px;
+    border-radius: 8px;
+  }
+
+  .dashicon {
+    text-align: center;
+    font-size: 60px;
+    color: white;
+    padding-left: 10px;
+    padding-top: 10px;
+    
+  }
+
+  .info-box {
+    display: block;
+    min-height: 90px;
+    background: #fff;
+    width: 100%;
+    box-shadow: 0 1px 1px rgba(0,0,0,0.1);
+    border-radius: 2px;
+}
+
+.bg-green {
+    background-color: #00a65a;
+    color: white;
+}
+
+.bg-aqua {
+    background-color: #00c0ef;
+    color: white;
+}
+
+.bg-red {
+    background-color: #dd4b39;
+    color: white;
+}
+
+.bg-yellow {
+    background-color: #f39c12;
+    color: white;
+}
+
+.padding {
+    padding-left: 10px;
+    padding-top: 10px;
+    padding-right: 10px;
+    padding-bottom: 10px;
+}
