--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,8 +1,8 @@
 <app-menu></app-menu>
 <div style="padding-left: 17rem;padding-right: 2rem;padding-top: 5rem;">
-        <div class="d-flex justify-content-between flex-wrap">
+        <div class="d-flex flex-wrap">
                 <div class="p-2 bd-highlight text-center">
-                    <div class="row padding">
+                    <div class="row padding" >
                         <div class="card">
                             <h5 class="card-header bg-green">
                                 <i class="fa fa-line-chart fa-5"></i>
@@ -13,7 +13,7 @@
                                     <span class="info-box-text bold3">10,000</span>
                                     <span class="info-box-text"> บาท</span>
                                 </h5>
-                                <a href="#" class="btn btn-light" style="width: 12rem;">รายละเอียด</a>
+                                <a href="#" class="btn btn-light" style="width: 12rem;" data-toggle="collapse" data-target="#dashsale">รายละเอียด</a>
                             </div>
                         </div>
                     </div>
@@ -30,7 +30,7 @@
                                     <span class="info-box-text bold3">5</span>
                                     <span class="info-box-text"> โต๊ะ</span>
                                 </h5>
-                                <a href="#" class="btn btn-light" style="width: 12rem;">รายละเอียด</a>
+                                <a href="#" class="btn btn-light" style="width: 12rem;" data-toggle="collapse" data-target="#dashtable">รายละเอียด</a>
                             </div>
                         </div>
                     </div>
@@ -47,7 +47,7 @@
                                     <span class="info-box-text bold3">20</span>
                                     <span class="info-box-text"> รายการ</span>
                                 </h5>
-                                <a href="#" class="btn btn-light" style="width: 12rem;">รายละเอียด</a>
+                                <a href="#" class="btn btn-light" style="width: 12rem;" data-toggle="collapse" data-target="#dashalertstock">รายละเอียด</a>
                             </div>
                         </div>
                     </div>
@@ -57,18 +57,52 @@
                             <div class="card">
                                 <h5 class="card-header bg-yellow">
                                     <i class="fa fa-paper-plane-o"></i>
-                                    <a class="bold2">สั่งกลับบ้าน</a>
+                                    <a class="bold2">ส่งห้องครัว</a>
                                 </h5>
                                 <div class="card-body">
                                     <h5 class="card-title">
                                         <span class="info-box-text bold3">5</span>
                                         <span class="info-box-text"> คิว</span>
                                     </h5>
-                                    <a href="#" class="btn btn-light" style="width: 12rem;">รายละเอียด</a>
+                                    <a href="#" class="btn btn-light" style="width: 12rem;" data-toggle="collapse" data-target="#dashkitchen">รายละเอียด</a>
                                 </div>
                             </div>
                         </div>
                     </div>
+                    <div class="p-2 bd-highlight text-center">
+                            <div class="row padding">
+                                <div class="card">
+                                    <h5 class="card-header bg-purple">
+                                        <i class="fa fa-paper-plane-o"></i>
+                                        <a class="bold2">สั่งกลับบ้าน</a>
+                                    </h5>
+                                    <div class="card-body">
+                                        <h5 class="card-title">
+                                            <span class="info-box-text bold3">5</span>
+                                            <span class="info-box-text"> คิว</span>
+                                        </h5>
+                                        <a href="#" class="btn btn-light" style="width: 12rem;" data-toggle="collapse" data-target="#dashdelivery">รายละเอียด</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="p-2 bd-highlight text-center">
+                                <div class="row padding">
+                                    <div class="card">
+                                        <h5 class="card-header bg-green-2">
+                                            <i class="fa fa-paper-plane-o"></i>
+                                            <a class="bold2">จำนวนลูกค้า</a>
+                                        </h5>
+                                        <div class="card-body">
+                                            <h5 class="card-title">
+                                                <span class="info-box-text bold3">80</span>
+                                                <span class="info-box-text"> คน</span>
+                                            </h5>
+                                            <a href="#" class="btn btn-light" style="width: 12rem;" data-toggle="collapse" data-target="#dashcustomer">รายละเอียด</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
         </div>
     </div>
 <div class="content-container" style="padding-top: 1rem;">
@@ -76,5 +110,35 @@
         <div class="card-header bold2">
             Dashboard
         </div>
+        <div class="collapse" id="dashsale">
+                <div class="card card-body">
+                  ประวัติการขายประจำวัน
+                </div>
+         </div>
+         <div class="collapse" id="dashtable">
+                <div class="card card-body">
+                  รายชื่อโต๊ะว่าง
+                </div>
+         </div>
+         <div class="collapse" id="dashalertstock">
+                <div class="card card-body">
+                  รายชื่อสินค้าใกล้หมด
+                </div>
+         </div>
+         <div class="collapse" id="dashkitchen">
+                <div class="card card-body">
+                  Order
+                </div>
+         </div>
+         <div class="collapse" id="dashdelivery">
+                <div class="card card-body">
+                  Delivery
+                </div>
+         </div>
+         <div class="collapse" id="dashcustomer">
+                <div class="card card-body">
+                  จำนวนลูกค้า
+                </div>
+         </div>
     </div>
 </div>
