--- a/src/app/salary/check-time/check-time.component.html
+++ b/src/app/salary/check-time/check-time.component.html
@@ -39,7 +39,7 @@
           <td class="text-left">Full-time</td>
           <td class="text-center">169:23:30</td>
           <td><div class="text-center">
-              <a class="btn">
+              <a class="btn"  data-toggle="modal" data-target="#edittime">
                   <i class="fa fa-eye"></i>ดูรายละเอียด</a>
       </div></td>
         </tr>
@@ -120,62 +120,50 @@
   </div>
 </div>
 
-<div class="modal fade" id="editsupplier" tabindex="-1" role="dialog" aria-labelledby="editsupplier" aria-hidden="true">
+<div class="modal fade" id="edittime" tabindex="-1" role="dialog" aria-labelledby="edittime" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="editsupplier">แก้ไขซัพพลายเออร์</h5>
+          <h5 class="modal-title" id="edittime">แก้ไขเวลาทำงาน</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <form>
+            <div class="modal-body">
+              <div class="form-group">
+                <label for="namecomp">ชื่อพนักงาน</label>
+                <select id="inputState" class="form-control">
+                    <option selected>Choose...</option>
+                    <option>...</option>
+                  </select>
+              </div>
+              <div class="form-row">
+    
+                <div class="form-group col-md-6">
+                  <label for="work_start">เวลาเข้างาน</label>
+                  <input type="date" name="work_start" class="form-control" id="work_start">
+                </div>
+                <div class="form-group col-md-6">
+                  <label for="word_end">เวลาเลิกงาน</label>
+                  <input type="date" name="word_end" class="form-control" id="word_end">
+                </div>
+              </div>
+    
+              <div class="form-group">
+                <label for="inputAddress2">สถานะ</label>
+                <select id="inputState" class="form-control">
+                    <option selected>Choose...</option>
+                    <option>...</option>
+                  </select>
+              </div>
+            </div>
+    
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">ยกเลิก</button>
+              <button type="button" class="btn btn-primary">บันทึก</button>
+            </div>
+          </form>
         </div>
-        <form>
-          <div class="modal-body">
-            <div class="form-group">
-              <label for="namecomp">ชื่อบริษัท</label>
-              <input type="text" class="form-control" id="namecomp" placeholder="บริษัท">
-            </div>
-            <div class="form-row">
-  
-              <div class="form-group col-md-6">
-                <label for="phonenum">หมายเลขโทรศัพท์</label>
-                <input type="text" class="form-control" id="phonenum" placeholder="หมายเลขโทรศัพท์">
-              </div>
-              <div class="form-group col-md-6">
-                <label for="emailcomp">อีเมล</label>
-                <input type="email" class="form-control" id="emailcomp" placeholder="อีเมล">
-              </div>
-            </div>
-  
-            <div class="form-group">
-              <label for="inputAddress2">ที่อยู่</label>
-              <input type="text" class="form-control" id="addresscomp" placeholder="เลขที่">
-            </div>
-            <div class="form-row">
-              <div class="form-group col-md-4">
-                <label for="city">อำเภอ</label>
-                <input type="text" class="form-control" id="city" placeholder="อำเภอ">
-              </div>
-              <div class="form-group col-md-4">
-                <label for="state">จังหวัด</label>
-                <select id="state" class="form-control">
-                  <option selected>กรุงเทพมหานคร</option>
-                  <option select>ร้อยเอ็ด</option>
-                  <option select>อุบลราชธานี</option>
-                </select>
-              </div>
-              <div class="form-group col-md-4">
-                <label for="zipcode">รหัสไปรษณีย์</label>
-                <input type="text" class="form-control" id="zipcode"  placeholder="รหัสไปรษณีย์">
-              </div>
-            </div>
-          </div>
-  
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">ยกเลิก</button>
-            <button type="button" class="btn btn-primary">บันทึก</button>
-          </div>
-        </form>
       </div>
     </div>
-  </div>
