--- a/src/app/salary/del-add-money/del-add-money.component.html
+++ b/src/app/salary/del-add-money/del-add-money.component.html
@@ -1,4 +1,175 @@
 <app-menu></app-menu>
-<div class="areaall">
-  <p>เพิ่ม-ลดเงิน</p>
+<div class="content-container">
+    <div class="d-flex justify-content-between" style="padding-bottom: 1rem;">
+        <div>
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addtime">
+              <i class="fa fa-plus-circle" aria-hidden="true"></i> เพิ่ม ลด ค่าตอบแทน</button>
+          </div>
+          <form class="form-inline my-2 my-lg-0">
+              <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
+            </form>
+    </div>
+
+  <div class="card">
+    <div class="card-header bold2">
+        เพิ่ม ลด ค่าตอบแทน
+        </div>
+
+
+    <table class="table table-bordered text-center">
+      <thead>
+        <tr>
+          <th scope="col">#</th>
+          <th scope="col">รหัสพนักงาน</th>
+          <th scope="col">ชื่อ - นามสกุล</th>
+          <th scope="col">ชื่อเล่น</th>
+          <th scope="col">ประเภทพนักงาน</th>
+          <th scope="col">ประเภทการเพิ่ม</th>
+          <th scope="col">การกระทำ</th>
+
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="row">1</th>
+          <td class="text-center">0003</td>
+          <td class="text-left">supawit</td>
+          <td class="text-center">เก่ง</td>
+          <td class="text-center">Full-time</td>
+          <td class="text-center"></td>
+          <td><div class="text-center">
+              <a class="btn"  data-toggle="modal" data-target="#editmoney">
+                  <i class="fa fa-eye"></i>ดูรายละเอียด</a>
+      </div></td>
+        </tr>
+      </tbody>
+    </table>
+
+    <div class="d-flex justify-content-end">
+      <nav aria-label="Page navigation example" style="padding-right: 1rem;">
+        <ul class="pagination">
+          <li class="page-item">
+            <a class="page-link" href="#">Previous</a>
+          </li>
+          <li class="page-item">
+            <a class="page-link" href="#">1</a>
+          </li>
+          <li class="page-item">
+            <a class="page-link" href="#">2</a>
+          </li>
+          <li class="page-item">
+            <a class="page-link" href="#">3</a>
+          </li>
+          <li class="page-item">
+              <a class="page-link" href="#">4</a>
+            </li>
+            <li class="page-item">
+                <a class="page-link" href="#">5</a>
+              </li>
+          <li class="page-item">
+            <a class="page-link" href="#">Next</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+
+
+  </div>
 </div>
+
+<div class="modal fade" id="addtime" tabindex="-1" role="dialog" aria-labelledby="addtime" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="addtime">เพิ่มเวลาทำงาน</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <form>
+        <div class="modal-body">
+          <div class="form-group">
+            <label for="namecomp">ชื่อพนักงาน</label>
+            <select id="inputState" class="form-control">
+                <option selected>Choose...</option>
+                <option>...</option>
+              </select>
+          </div>
+          <div class="form-row">
+
+            <div class="form-group col-md-6">
+              <label for="work_start">เวลาเข้างาน</label>
+              <input type="date" name="work_start" class="form-control" id="work_start">
+            </div>
+            <div class="form-group col-md-6">
+              <label for="word_end">เวลาเลิกงาน</label>
+              <input type="date" name="word_end" class="form-control" id="word_end">
+            </div>
+          </div>
+
+          <div class="form-group">
+            <label for="inputAddress2">สถานะ</label>
+            <select id="inputState" class="form-control">
+                <option selected>Choose...</option>
+                <option>...</option>
+              </select>
+          </div>
+        </div>
+
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">ยกเลิก</button>
+          <button type="button" class="btn btn-primary">บันทึก</button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="editmoney" tabindex="-1" role="dialog" aria-labelledby="editmoney" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="editmoney">แก้ไขเวลาทำงาน</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <form>
+            <div class="modal-body">
+              <div class="form-group">
+                <label for="namecomp">ชื่อพนักงาน</label>
+                <select id="inputState" class="form-control">
+                    <option selected>Choose...</option>
+                    <option>...</option>
+                  </select>
+              </div>
+              <div class="form-row">
+    
+                <div class="form-group col-md-6">
+                  <label for="work_start">เวลาเข้างาน</label>
+                  <input type="date" name="work_start" class="form-control" id="work_start">
+                </div>
+                <div class="form-group col-md-6">
+                  <label for="word_end">เวลาเลิกงาน</label>
+                  <input type="date" name="word_end" class="form-control" id="word_end">
+                </div>
+              </div>
+    
+              <div class="form-group">
+                <label for="inputAddress2">สถานะ</label>
+                <select id="inputState" class="form-control">
+                    <option selected>Choose...</option>
+                    <option>...</option>
+                  </select>
+              </div>
+            </div>
+    
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">ยกเลิก</button>
+              <button type="button" class="btn btn-primary">บันทึก</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
