--- a/src/app/salary/del-add-money/del-add-money.component.html
+++ b/src/app/salary/del-add-money/del-add-money.component.html
@@ -37,7 +37,7 @@
           <td class="text-left">supawit</td>
           <td class="text-center">เก่ง</td>
           <td class="text-center">Full-time</td>
-          <td class="text-center"></td>
+          <td class="text-center">เบี้ยขยัน</td>
           <td><div class="text-center">
               <a class="btn"  data-toggle="modal" data-target="#editmoney">
                   <i class="fa fa-eye"></i>ดูรายละเอียด</a>
@@ -62,12 +62,6 @@
             <a class="page-link" href="#">3</a>
           </li>
           <li class="page-item">
-              <a class="page-link" href="#">4</a>
-            </li>
-            <li class="page-item">
-                <a class="page-link" href="#">5</a>
-              </li>
-          <li class="page-item">
             <a class="page-link" href="#">Next</a>
           </li>
         </ul>
@@ -82,7 +76,7 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="addtime">เพิ่มเวลาทำงาน</h5>
+        <h5 class="modal-title" id="addtime">เพิ่ม ลด ค่าตอบแทน</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -99,12 +93,8 @@
           <div class="form-row">
 
             <div class="form-group col-md-6">
-              <label for="work_start">เวลาเข้างาน</label>
+              <label for="work_start">วันที่เพิ่ม</label>
               <input type="date" name="work_start" class="form-control" id="work_start">
-            </div>
-            <div class="form-group col-md-6">
-              <label for="word_end">เวลาเลิกงาน</label>
-              <input type="date" name="word_end" class="form-control" id="word_end">
             </div>
           </div>
 
@@ -130,7 +120,7 @@
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="editmoney">แก้ไขเวลาทำงาน</h5>
+          <h5 class="modal-title" id="editmoney">แก้ไข เพิ่ม ลด ค่าตอบแทน</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
